# Swordflare-Market-Bot

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  items.rs
.github/ISSUE_TEMPLATE/: bug_report.md
locales/: en-BRAILLE.yml  en-LOL.yml  en-PIRATE.yml  en-REV.yml  en-US.yml  en.yml  ko-KR-official.yml  ko-KR.yml
src/: cleanup.rs  cow.rs  duration.rs  item_name.rs  items.rs  macros.rs  magic_numbers.rs  main.rs  post.rs  proc_macro.rs
src/cleanup/: auction.rs  dropguard.rs  mod.rs
src/commands/: language.rs  list_items.rs  mod.rs  moderation.rs  new_auction.rs  new_trade.rs  version.rs
src/database/: auction_db.rs  mod.rs  supported_locale.rs  trade_db.rs
src/event_handler/: auction_bid.rs  buy_interaction.rs  confirm_flow.rs  handle_edit.rs  mod.rs
src/event_handler/buttons/: auction_cancel.rs  bid.rs  buy.rs  edit.rs  mod.rs  refresh.rs  report.rs
